--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,22 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    
+    <meta name="description" content="We are Flutter, Fullstack, and Web developers, creating applications for Android, iOS, Web, and Windows." />
+    <meta name="keywords" content="Flutter development, Fullstack development, Web development, Android apps, iOS apps, Windows applications, NoCorps" />
+    <meta name="author" content="NoCorps" />
+
+    <meta name="google-site-verification" content="p0pMcEksf5ay_EgxcWT4l2flxiiHLF8RwUXhgluLTrE" />
+
+
+    <meta property="og:title" content="NoCorps - App & Web Development" />
+    <meta property="og:description" content="Expert developers in Flutter, Fullstack, and Web development. Get your mobile, web, and Windows apps built with top quality!" />
+    <meta property="og:image" content="https://nocorps.netlify.app/static/media/NcLogo.cb473cff8e023f7bd432.png" />
+    <meta property="og:url" content="https://nocorps.netlify.app" />
+
+
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>NoCorps</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
