--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
 
 
     <meta property="og:title" content="NoCorps - App & Web Development" />
-    <meta property="og:description" content="Expert developers in Flutter, Fullstack, and Web development. Get your mobile, web, and Windows apps built with top quality!" />
-    <meta property="og:image" content="https://nocorps.netlify.app/static/media/NcLogo.cb473cff8e023f7bd432.png" />
-    <meta property="og:url" content="https://nocorps.netlify.app" />
+    <meta property="og:description" content=" Expert developers in Flutter, Fullstack, and Web development. Get your mobile, web, and Windows apps built with top quality!" />
+    <meta property="og:image" content="https://7rounds.xyz/static/media/NcLogo.cb473cff8e023f7bd432.png" />
+    <meta property="og:url" content="https://7rounds.xyz" />
 
 
 
